Sun Sep 02 23:30:56 2001  George Lebl <jirka@5z.com>

	* gnome-exec.c, gnome-url.c: clean up headers a bit, and do lazy gconf init

	* gnome-gconf.[ch]:  Don't do all the init on init, but only when
	  something calls gnome_gconf_lazy_init

	* gnome-init.c: remove the bonobo stuff, init vfs after arguments are
	  parsed for bonobo-activation argument parsing to work right

	* gnome-program.[ch], gnome-gconf.[ch], gnome-init.[ch],
	  test-libgnome.c:  Make all the module info stuff into getters
	  rather then data pointers.  This makes the lib have no exported
	  data symbols which is apparently more kosher and makes some
	  optimizations in loading possible.

	* gnome-program.c: when comparing modules, just compare pointers.  We
	  require pointers to stay the same anyway.  So we save a whole bunch
	  of string compares this way.  And we already did this somewhat
	  anyway

	* gnome-sound.[ch]: Remove gnome_sound_connection and add
	  gnome_sound_connection_get (), which works a lot better for
	  on demand esound starting.

Sun Sep 02 14:15:46 2001  George Lebl <jirka@5z.com>

	* gnome-help.[ch], gnome-url.[ch]: fix compilation with popt, remove
	  some of the duplicated errors and just pass the underlying errors
	  where appropriate.  Use g_spawn instead of the gnome exec function.
	  also fix a memory leak.

2001-09-02  Anders Carlsson  <andersca@gnu.org>

	* Makefile.am: Remove compilation of Gnome.idl.

	* gnome-exec.c: (gnome_prepend_terminal_to_vector):
	Use gconf.
	
	* gnome-help.c: (gnome_help_display_uri):
	Use the old gnome_url_show API.
	
	* gnome-init.c: (libbonobo_class_init):
	Don't initialize the bonobo-config monikers.
	
	* gnome-init.h:
	Remove functions to get a ConfigDatabase from a GnomeProgram.
	
	* gnome-preferences.c: (desktop_property_get_boolean),
	(desktop_property_set_boolean):
	Add a really bad hack (always return FALSE on get_boolean) until
	we can put GnomePreferences out of its misery.
	