@@ -1,3 +1,9 @@
+Mon Sep 03 02:18:51 2001  George Lebl <jirka@5z.com>
+
+	* gnome-gconf.c, gnome-init.c: get versions right
+
+	* gnome-program.c: fixup gnome_program_get doc
+
 Sun Sep 02 23:30:56 2001  George Lebl <jirka@5z.com>
 
 	* gnome-exec.c, gnome-url.c: clean up headers a bit, and do lazy gconf init
